# ZalmanimAI

./: .dockerignore  .env.example  .gitattributes  .gitignore  .mcp.json  ARCHITECTURE_REVIEW.md  README.md  SECURITY_AUDIT_FINDINGS.md  SECURITY_REVIEW.md  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  lmupdate.cmd  tmp_artist_activity_logs.sql  tmp_artists.sql  tmp_catalog_tracks.sql  tmp_compose_auth.yml  tmp_labelops_dump.sql  tmp_labelops_dump.sql.gz.b64  tmp_mail_settings.sql  tmp_release_artists.sql  tmp_releases.sql  tmp_users.sql  wp-codex-bridge.env
.codex/: config.toml
.tmp/: codex-config.toml  process_release_link_scans.py  queue_release_link_scans.sql  release_link_progress.sql  release_link_run_inspect.sql
apps/mcp/: .env.example  pyproject.toml
apps/mcp/tests/: test_client.py  test_config.py  test_server.py
apps/mcp/zalmanim_mcp/: __init__.py  __main__.py  client.py  config.py  server.py
apps/mcp/zalmanim_mcp/tools/: __init__.py  artists.py  audiences.py  campaigns.py  demos.py  email.py  raw.py  releases.py  system.py
deploy/: .env.production.example  .env.simonsrv  .env.staging.example  DEPLOY_VPS.md  EMAIL_ZALMANIM_SELFHOST.md  docker-compose.simonsrv.yml
docs/: 13-final-improvement-report.md  ARCHITECTURE.md  FLUTTER_UI_TODO.md  REMEDIATION-CHANGELOG.md
reports/: artists_for_db.csv  artists_from_release_management_raw.csv  beatport_all_releases_both_labels.csv  beatport_siyu_rec_releases.csv  beatport_siyu_rec_releases.md  beatport_zalmanim_records_releases.csv  beatport_zalmanim_records_releases.md  (+4 more)
(+333 files in other folders)
