[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zalmanim-mcp"
version = "0.1.0"
description = "MCP server that exposes the Zalmanim AI (LabelOps) admin API as Claude tools."
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
zalmanim-mcp = "zalmanim_mcp.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["zalmanim_mcp*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
